// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test create page empty page 1`] = `
Page {
  "blocks": Array [],
  "cache": Object {
    "sharedTtl": 0,
    "ttl": 0,
  },
  "head": Object {
    "defaultTitle": "-",
    "htmlAttributes": Object {},
    "links": Array [],
    "meta": Array [],
    "title": "-",
    "titleTemplate": "%s",
  },
  "id": "id",
  "path": "",
  "settings": Object {},
  "statusCode": 200,
  "template": "default",
  "type": "document",
}
`;

exports[`test create page with block definitions 1`] = `
Page {
  "blocks": Array [
    Object {
      "container": "main",
      "id": "",
      "meta": Object {},
      "order": 0,
      "settings": Object {
        "foo": "bar",
      },
      "type": "my.container",
    },
  ],
  "cache": Object {
    "sharedTtl": 0,
    "ttl": 0,
  },
  "head": Object {
    "defaultTitle": "-",
    "htmlAttributes": Object {},
    "links": Array [],
    "meta": Array [],
    "title": "-",
    "titleTemplate": "%s",
  },
  "id": "id",
  "path": "",
  "settings": Object {},
  "statusCode": 200,
  "template": "default",
  "type": "document",
}
`;

exports[`test create page with cache 1`] = `
Page {
  "blocks": Array [],
  "cache": Object {
    "sharedTtl": 0,
    "ttl": 999,
  },
  "head": Object {
    "defaultTitle": "-",
    "htmlAttributes": Object {},
    "links": Array [],
    "meta": Array [],
    "title": "-",
    "titleTemplate": "%s",
  },
  "id": "id",
  "path": "",
  "settings": Object {},
  "statusCode": 200,
  "template": "default",
  "type": "document",
}
`;

exports[`test create page with head 1`] = `
Page {
  "blocks": Array [],
  "cache": Object {
    "sharedTtl": 0,
    "ttl": 0,
  },
  "head": Object {
    "defaultTitle": "-",
    "htmlAttributes": Object {},
    "links": Array [],
    "meta": Array [],
    "title": "My Custom Title",
    "titleTemplate": "%s",
  },
  "id": "id",
  "path": "",
  "settings": Object {},
  "statusCode": 200,
  "template": "default",
  "type": "document",
}
`;

exports[`test createContext test clientSide context 1`] = `
Object {
  "isClientSide": false,
  "isServerSide": true,
  "req": Object {
    "body": "",
    "headers": Object {},
    "hostname": "ekino.com",
    "method": "GET",
    "params": Object {},
    "pathname": "/foobar",
    "query": Object {
      "foo": "bar",
    },
  },
  "settings": Object {},
}
`;

exports[`test createContext test clientSide context 2`] = `
Object {
  "isClientSide": false,
  "isServerSide": true,
  "req": Object {
    "body": "",
    "headers": Object {},
    "hostname": "ekino.com",
    "method": "GET",
    "params": Object {},
    "pathname": "/foobar",
    "query": Object {
      "foo": "bar",
    },
  },
  "settings": Object {
    "foo": "bar",
  },
}
`;

exports[`test mergePages should merge properly 1`] = `
Page {
  "blocks": Array [
    Object {
      "container": "header",
      "id": "id-1",
      "meta": Object {},
      "order": 1,
      "settings": Object {},
      "type": "type-parent-1",
    },
    Object {
      "container": "header",
      "id": "id-2",
      "meta": Object {},
      "order": 1,
      "settings": Object {},
      "type": "type-parent-2",
    },
    Object {
      "container": "header",
      "id": "id-1",
      "meta": Object {},
      "order": 1,
      "settings": Object {},
      "type": "type-child-1",
    },
    Object {
      "container": "header",
      "id": "id-2",
      "meta": Object {},
      "order": 1,
      "settings": Object {},
      "type": "type-child-2",
    },
  ],
  "cache": Object {
    "sharedTtl": 0,
    "ttl": 100,
  },
  "head": Object {
    "defaultTitle": "The default title",
    "htmlAttributes": Object {
      "foo": "bar",
    },
    "links": Array [],
    "meta": Array [
      Object {
        "name": "foo",
      },
      Object {
        "property": "value",
      },
    ],
    "title": "-",
    "titleTemplate": "%s",
  },
  "id": "the child page",
  "path": "/the-child",
  "settings": Object {},
  "statusCode": 403,
  "template": "2-columns",
  "type": "document",
}
`;

exports[`test mergePages should not generate an error if on entry is not defined 1`] = `
Page {
  "blocks": Array [
    Object {
      "container": "header",
      "id": "id-1",
      "meta": Object {},
      "order": 1,
      "settings": Object {},
      "type": "type-child-1",
    },
    Object {
      "container": "header",
      "id": "id-2",
      "meta": Object {},
      "order": 1,
      "settings": Object {},
      "type": "type-child-2",
    },
  ],
  "cache": Object {
    "sharedTtl": 0,
    "ttl": 100,
  },
  "head": Object {
    "defaultTitle": "-",
    "htmlAttributes": Object {
      "foo": "bar",
    },
    "links": Array [],
    "meta": Array [
      Object {
        "property": "value",
      },
    ],
    "title": "-",
    "titleTemplate": "%s",
  },
  "id": "the child page",
  "path": "/the-child",
  "settings": Object {},
  "statusCode": 403,
  "template": "2-columns",
  "type": "document",
}
`;
